# LineageGuard

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.agents/skills/lineageguard-review/: SKILL.md
.agents/skills/lineageguard-review/agents/: openai.yaml
.agents/skills/lineageguard-review/references/: datahub-mcp-contract.md
.github/workflows/: ci.yml
demo-video/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
demo-video/src/: Composition.tsx  index.css
examples/: datahub_context.json  proposed_change.sql  safe_change.sql  sample_review.json  sample_review.md
examples/github-actions/: lineageguard.yml
src/lineageguard/: __init__.py  analyzer.py  cli.py  mcp_client.py  models.py  providers.py  render.py  webapp.py
src/lineageguard/static/: index.html
tests/: test_analyzer.py  test_cli.py  test_mcp_cli.py  test_mcp_client.py  test_mcp_provider.py  test_mcp_smoke.py
