[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lineageguard"
version = "0.1.0"
description = "A DataHub-aware agent that reviews SQL schema changes before they break downstream assets."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "hualuoz" }]
dependencies = [
  "fastapi>=0.116",
  "pydantic>=2.8",
  "sqlglot>=26.0",
  "typer>=0.12",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
datahub = ["acryl-datahub>=1.1.0"]
dev = ["pytest>=8.0", "ruff>=0.9"]

[project.scripts]
lineageguard = "lineageguard.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/lineageguard"]
